# Zephyr

events/: CMakeLists.txt  prj.conf
events/src/: main.c
interrupt_hardware_gpio/: CMakeLists.txt
interrupt_hardware_gpio/boards/: milkv_duo256m.overlay
interrupt_hardware_gpio/dts/bindings/: gpio-pins.yaml
interrupt_hardware_gpio/src/: main.c
interrupt_software/: CMakeLists.txt
interrupt_software/src/: main.c
queue/: CMakeLists.txt
queue/src/: main.c
semaphores/: CMakeLists.txt  prj.conf
semaphores/src/: main.c
thread_creation/: prj.conf
thread_creation/src/: main.c
timer/: CMakeLists.txt
timer/src/: main.c
uart/: CMakeLists.txt
uart/src/: main.c
watchdog/: CMakeLists.txt  prj.conf
watchdog/src/: main.c
